--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,11 +1,11 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: lucidia console thin, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #282a36;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,13 +14,15 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  color: #6272a4;
   text-decoration: inherit;
 }
+
 a:hover {
-  color: #535bf2;
+  color: #8be9fd;
+  text-decoration: underline;
 }
+
 
 body {
   margin: 0;
@@ -42,7 +44,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #282a36;
   cursor: pointer;
   transition: border-color 0.25s;
 }
