--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -37,6 +37,18 @@ h1 {
   line-height: 1.1;
 }
 
+h2 {
+  font-size: 2.4em;
+  line-height: 1.2;
+  color: #ff79c6;
+  font-family: lucida console thin;
+}
+
+p {
+  color: #ffb86c;
+  font-family: lucida console thin;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
