--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -23,6 +23,10 @@ a:hover {
   text-decoration: underline;
 }
 
+a.active {
+  color: #8be9fd;
+  text-decoration: underline;
+}
 
 body {
   margin: 0;
@@ -45,7 +49,7 @@ h2 {
 }
 
 p {
-  color: #ffb86c;
+  color: #f1fa8c;
   font-family: lucida console thin;
 }
 
